[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/doctrine_panel.gd" id="1_panel"]

[node name="DoctrinePanel" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 40.0
offset_right = -40.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_panel")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="TopBar" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 36)

[node name="Title" type="Label" parent="MarginContainer/VBox/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "DOCTRINE RESEARCH"

[node name="RPLabel" type="Label" parent="MarginContainer/VBox/TopBar"]
layout_mode = 2
text = "RP: 0"

[node name="Spacer" type="Control" parent="MarginContainer/VBox/TopBar"]
layout_mode = 2
custom_minimum_size = Vector2(16, 0)

[node name="CloseButton" type="Button" parent="MarginContainer/VBox/TopBar"]
layout_mode = 2
custom_minimum_size = Vector2(80, 0)
text = "Close"

[node name="Sep" type="HSeparator" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="ScrollArea" type="ScrollContainer" parent="MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="TreeContainer" type="VBoxContainer" parent="MarginContainer/VBox/ScrollArea"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 12

[node name="StatusLabel" type="Label" parent="MarginContainer/VBox"]
layout_mode = 2
text = "Select a doctrine to research."
